<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="media_streamder">SPOTIFY STREAMER</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="ant_terminator">BUILD IT BIGGER</string>
    <string name="materialize">BEACON READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
</resources>
