<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hp.naondegreeproject0.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:text="My Nanodegree Apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:id="@+id/textView1"
        android:textColor="#9fa8da"
        />
    <Button
        android:id="@+id/media_streamder"
        android:layout_weight="0.5"
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/media_streamder"
        android:background="#ff9800"
        />
    <Button
        android:id="@+id/super_duo1"
        android:layout_weight="0.5"
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/super_duo1"
        android:background="#ff9800"
        />
    <Button
        android:id="@+id/super_duo2"
        android:layout_weight="0.5"
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/super_duo2"
        android:background="#ff9800"
        />
    <Button
        android:id="@+id/ant_terminator"
        android:layout_weight="0.5"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ant_terminator"
        android:background="#ff9800"
        />
    <Button
        android:id="@+id/materialize"
        android:layout_weight="0.5"
        android:layout_width="250dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/materialize"
        android:background="#ff9800"
        />
    <Button
        android:id="@+id/capstone"
        android:layout_weight="0.5"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/capstone"
        android:background="#f06292"
        />
</LinearLayout>
